css issue to fix wrap error w/ react-lines-ellipsis (#192)

--- a/scss/module-top-information.scss
+++ b/scss/module-top-information.scss
@@ -207,6 +207,10 @@
               line-height: 18px;
               max-height: 36px;
               overflow: hidden;
+
+              .LinesEllipsis {
+                white-space: pre-wrap;
+              }
             }
           }
         }
